some more changes to fix stretch

--- a/static/style.css
+++ b/static/style.css
@@ -20,6 +20,10 @@ form {
     height: 480px;
 }
 
+#myCanvas {
+    margin: auto;
+}
+
 body {
     font-family: "Open Sans";
     margin: auto;
